# ga_demo

./: .tm_project2.cache  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h  config.status  config.status.lineno  configure  configure.ac  libtool
examples/: elitism-singlepoint-linear.conf  elitism-singlepoint-square.conf  elitism-twopoint-linear.conf  elitism-twopoint-square.conf  elitism-uniform-linear-mt_hardtest.conf  elitism-uniform-linear-ran0_hardtest.conf  elitism-uniform-linear.conf  elitism-uniform-square.conf  example1.txt  example2.txt  example3.txt  example4.txt  rank-singlepoint-linear.conf  rank-singlepoint-square.conf  rank-twopoint-linear.conf  rank-twopoint-square.conf  rank-uniform-linear-mt_hardtest.conf  rank-uniform-linear-ran0_hardtest.conf  rank-uniform-linear.conf  rank-uniform-square.conf  roulette-singlepoint-linear.conf  roulette-singlepoint-square.conf  roulette-twopoint-linear.conf  roulette-twopoint-square.conf  roulette-uniform-linear.conf  roulette-uniform-square.conf  tournament-singlepoint-linear.conf  tournament-singlepoint-square.conf  tournament-twopoint-linear.conf  tournament-twopoint-square.conf  (+1 more)
po/: Makefile  (+1 more)
src/: Citizen.cpp  Citizen.h  Functions.cpp  Functions.h  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  Population.cpp  Population.h  StringCitizen.cpp  StringCitizen.h  StringPopulation.cpp  StringPopulation.h  main.cc  main.cpp  mt19937ar.c  mt19937ar.h
src/.deps/: Citizen.Po  Functions.Po  Population.Po  StringCitizen.Po  StringPopulation.Po  main.Po  mt19937ar.Po
(+1 files in other folders)
