## Process this file with automake to produce Makefile.in

## Created by Anjuta

INCLUDES = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = geneticalgorithm

geneticalgorithm_SOURCES = \
	main.cc           \
	Citizen.h           \
	Population.h           \
	StringPopulation.h           \
	StringCitizen.h           \
	StringCitizen.cpp           \
	Citizen.cpp           \
	Population.cpp           \
	StringPopulation.cpp           \
	mt19937ar.c           \
	mt19937ar.h           \
	Functions.cpp           \
	Functions.h

geneticalgorithm_LDFLAGS = 

geneticalgorithm_LDADD = 

